# alith

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  node-sdk.yaml  python-sdk.yaml  scraping.yaml
crates/alith/: Cargo.toml
crates/alith/examples/: README.md  agent.rs  agent_claude.rs  agent_deepseek.rs  agent_grok.rs  agent_with_cot.rs  agent_with_decision.rs  agent_with_embeddings.rs  agent_with_extractor.rs  agent_with_knowledge.rs  agent_with_mcp.rs  agent_with_memory.rs  agent_with_qdrant.rs  agent_with_rag.rs  agent_with_search_tool.rs  agent_with_store.rs  agent_with_tools.rs  gguf_loader.rs  hf_loader.rs  rag.rs  servers_config.json  tokenizer.rs
crates/alith/src/: lib.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: basic_completion.rs  embeddings.rs  lib.rs  prelude.rs
crates/client/src/backend_builders/: anthropic.rs  mod.rs  openai.rs  perplexity.rs
crates/client/src/components/: instruct_prompt.rs
crates/client/src/components/cascade/: mod.rs  round.rs  step.rs
crates/client/src/components/grammar/: basic_url.rs  boolean.rs  custom.rs  exact_string.rs  faux_url.rs  integer.rs  mod.rs  none.rs
crates/client/src/components/grammar/text/: mod.rs  sentences.rs  text_grammar.rs  text_list.rs  words.rs
crates/client/src/workflows/: basic_primitive.rs
crates/client/src/workflows/classify/: mod.rs  subject_of_text.rs
crates/client/src/workflows/classify/hierarchical_classification/: hierarchical_tagger.rs  mod.rs  tag.rs  tag_collection.rs  tag_describer.rs
crates/client/src/workflows/nlp/: mod.rs
crates/client/src/workflows/nlp/extract/: mod.rs  urls.rs
crates/client/src/workflows/reason/: decision.rs  mod.rs  one_round.rs
crates/core/: Cargo.toml
crates/core/examples/: agent.rs  agent_with_tools.rs
crates/core/src/: agent.rs  chat.rs  chunking.rs  cleaner.rs  embedding.rs  embeddings.rs  executor.rs  extractor.rs  flow.rs  json.rs  knowledge.rs  lib.rs  llm.rs  mcp.rs  memory.rs  parser.rs  splitting.rs  store.rs  task.rs  tool.rs
crates/core/src/chunking/: linear_chunker.rs  overlap.rs
crates/core/src/llm/: client.rs
crates/core/src/splitting/: markdown.rs
crates/devices/: Cargo.toml  LICENSE  README.md
crates/devices/src/: logging.rs
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs  ort.rs  tokenizers.rs
crates/interface/: Cargo.toml  README.md
crates/interface/src/: lib.rs
crates/interface/src/llms/: mod.rs
crates/interface/src/llms/api/: config.rs
crates/interface/src/llms/api/anthropic/: builder.rs  mod.rs
crates/interface/src/llms/api/anthropic/completion/: req.rs  res.rs
crates/interface/src/llms/api/generic_openai/: mod.rs
crates/interface/src/llms/api/openai/: builder.rs  mod.rs
crates/interface/src/llms/api/openai/completion/: mod.rs  req.rs  res.rs
crates/interface/src/llms/api/perplexity/: builder.rs
crates/interface/src/llms/local/: mod.rs
crates/interface/src/llms/local/llama_cpp/: mod.rs
crates/interface/src/llms/local/mistral_rs/: mod.rs
crates/interface/src/llms/local/ort/: mod.rs
crates/interface/src/requests/: logit_bias.rs  mod.rs  req_components.rs  res_components.rs
crates/interface/src/requests/completion/: error.rs  request.rs  response.rs
crates/interface/src/requests/embeddings/: error.rs  mod.rs  request.rs  response.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: html.rs  lib.rs  pdf.rs  string.rs  text.rs
crates/models/: Cargo.toml  README.md
crates/models/src/: lib.rs  tokenizer.rs
crates/models/src/api_model/: anthropic.rs  mod.rs  openai.rs  perplexity.rs
crates/models/src/local_model/: chat_template.rs  hf_loader.rs  mod.rs
crates/models/src/local_model/gguf/: memory.rs  mod.rs
crates/models/src/local_model/gguf/loaders/: hf.rs  local.rs  preset.rs
crates/models/src/local_model/gguf/preset/: mod.rs
crates/models/src/local_model/gguf/tools/: gguf_file.rs  gguf_layers.rs  gguf_tensors.rs  gguf_tokenizer.rs
crates/models/src/local_model/metadata/: general.rs  mod.rs  tokenizer.rs
crates/models/src/local_model/metadata/llm/: llama.rs
crates/prompt/: Cargo.toml  README.md
crates/prompt/src/: api_prompt.rs  chat_template_prompt.rs  concatenator.rs  lib.rs  llm_prompt.rs  local_prompt.rs  openai_prompt.rs  prompt_message.rs  prompt_tokenizer.rs  token_count.rs
crates/store/src/: qdrant.rs
crates/tools/: Cargo.toml
crates/utils/: Cargo.toml  README.md
docs/: intro.md
examples/: agent.rs  agent_with_tools.rs  rag.rs
integrations/coinbase_agentkit/: README.md
integrations/elizaos/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts
integrations/langchain/: README.md
knowledge/metis/: blog.json
scripts/: README.md  addknowledge_blog.py
sdks/node/: .gitignore  Cargo.toml  Makefile  README.md  agent.d.ts  agent.js  agent.ts  index.d.ts  index.js  index.ts  internal.d.ts  internal.js  package.json  tool.d.ts  tool.js  tool.ts  tsconfig.json  typedoc.json
sdks/node/__test__/: chunking.spec.js  testing.spec.js  testing.spec.mjs
sdks/node/alith/: agent.ts
sdks/node/examples/: README.md  agent.ts  agent_deepseek.ts  agent_grok.ts  agent_twitter.ts  agent_with_embeddings.ts  agent_with_extractor.ts  agent_with_mcp.ts  agent_with_qdrant.ts  agent_with_siliconflow.ts  agent_with_tools.ts  agent_with_zod_schema_tools.ts  chunking.ts  mcp_twitter.json
sdks/node/npm/darwin-arm64/: README.md  package.json
sdks/node/npm/darwin-x64/: README.md  package.json
sdks/node/npm/linux-arm64-gnu/: README.md  package.json
sdks/node/npm/linux-x64-gnu/: README.md  package.json
sdks/node/npm/win32-arm64-msvc/: README.md  package.json
sdks/node/npm/win32-x64-msvc/: README.md  package.json
sdks/node/src/: agent.ts  embeddings.ts  extrator.ts  index.ts  internal.d.ts  internal.js  lib.rs  memory.ts  store.ts  tool.rs  tool.ts
sdks/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
sdks/rust/: Cargo.toml  README.md
website/: .gitignore  README.md  next.config.mjs  package.json
(+92 files in other folders)
