[workspace]
members = ["crates/*", "sdks/*"]
default-members = ["crates/alith"]
resolver = "2"

[workspace.dependencies]
alith = { path = "crates/alith" }
alith-core = { path = "crates/core" }
llm_client = { git = "https://github.com/lazai-labs/llm_client", version = "0.1.0" }
async-trait = "0.1.84"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["sync", "rt", "macros", "rt-multi-thread"] }

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
exclude = [".github/"]
