[workspace]
members = ["crates/*", "sdks/*"]
default-members = ["crates/alith"]
resolver = "2"

[workspace.dependencies]
alith = { path = "crates/alith" }
alith-core = { path = "crates/core" }
alith-knowledge = { path = "crates/knowledge" }
alith-store = { path = "crates/store" }
alith-inference = { path = "crates/inference" }
alith-tools = { path = "crates/tools" }

llm_client = { git = "https://github.com/0xLazAI/llm_client", version = "0.2.0" }
fastembed = { git = "https://github.com/Anush008/fastembed-rs", version = "4.4.0", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
async-trait = "0.1.87"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
schemars = "0.8.22"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
url = "2.5.4"
dagrs = "0.4.2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.84"
exclude = [".github/"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
rpath = true
panic = "unwind"
