[workspace]
members = ["crates/*", "sdks/*"]
default-members = ["crates/alith"]
resolver = "2"

[workspace.dependencies]
alith = { path = "crates/alith" }
alith-core = { path = "crates/core" }
alith-knowledge = { path = "crates/knowledge" }
alith-store = { path = "crates/store" }
alith-inference = { path = "crates/inference" }
alith-tools = { path = "crates/tools" }
alith-client = { path = "crates/client" }
alith-devices = { path = "crates/devices" }
alith-models = { path = "crates/models" }
alith-prompt = { path = "crates/prompt" }
alith-interface = { path = "crates/interface" }

fastembed = { git = "https://github.com/Anush008/fastembed-rs", version = "4.4.0", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
async-trait = "0.1.87"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
schemars = "0.8.22"
reqwest = { version = "0.12.13", default-features = false, features = ["rustls-tls"] }
url = "2.5.4"
dagrs = "0.4.2"
serial_test = "3.1.1"
tracing = "0.1.40"
half = "*"
colorful = "0.3.2"
dotenvy = "0.15.7"
indenter = "0.3.3"
tiktoken-rs = "0.6.0"

[workspace.package]
version = "0.4.1"
edition = "2021"
rust-version = "1.84"
exclude = [".github/"]
homepage = "alith.lazai.network"
license = "Apache-2.0"
repository = "https://github.com/0xLazAI/alith"
authors = ["LazAI Labs Authors", "Shelby Jenkins"]
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
rpath = true
panic = "unwind"
