[package]
name = "alith"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alith-core.workspace = true
alith-knowledge.workspace = true
alith-store.workspace = true
alith-inference.workspace = true

async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
schemars.workspace = true

[[example]]
name = "agent"

[[example]]
name = "agent_deepseek"

[[example]]
name = "agent_with_tools"

[[example]]
name = "agent_with_knowledge"

[[example]]
name = "agent_with_rag"

[[example]]
name = "agent_with_qdrant"

[features]
inference = ["alith-core/inference", "alith-inference/inference"]
