[package]
name = "alith-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alith-client.workspace = true
alith-models.workspace = true
alith-interface.workspace = true

anyhow.workspace = true
async-trait.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
fastembed.workspace = true
dagrs.workspace = true
regex = "1.11"
futures = { version = "0.3", features = ["alloc", "std", "async-await"] }
hnsw_rs = "0.3.1"
lru = "0.13.0"
mcp-client = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
html2text = "0.14.1"
rayon = "1.10.0"
unicode-properties = "0.1.3"
unicode-segmentation = "1.11.0"
url = "2.5.2"
text-splitter = { version = "0.24.1", features = ["markdown", "tiktoken-rs"] }

[features]
inference = []
