[package]
description = "The Backend for the alith-client Crate"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "alith-interface"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
alith-devices.workspace = true
alith-models.workspace = true
alith-prompt.workspace = true

anyhow.workspace = true
colorful.workspace = true
dotenvy.workspace = true
indenter.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.10.1"
clap = { version = "4.5.32", optional = true }
secrecy = "0.10.3"
sysinfo = { version = "0.33.1", optional = true, default-features = false, features = [
    "system",
] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2.5.2"

[features]
default = []

[dev-dependencies]
serial_test.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }

[build-dependencies]
cargo_metadata = "0.19.2"
alith-devices.workspace = true
