[package]
description = "Load and Download LLM Models, Metadata, and Tokenizers"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "alith-models"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
alith-prompt.workspace = true
anyhow.workspace = true
colorful.workspace = true
dotenvy.workspace = true
indenter.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
half.workspace = true

hf-hub = { version = "0.4.2", default-features = false, features = ["ureq", "tokio", "rustls-tls"] }
byteorder = "1.5.0"
minijinja = "2.0.1"
paste = "1.0.15"
tiktoken-rs = "0.5.9"
tokenizers = "0.20.0"
